# BVRuler

./: CMakeLists.txt  LICENSE  README.md
cmake/: BVRulerDependencies.cmake
include/: imgseg.h  tools.h
src/: imgseg.cpp  main.cpp  tools.cpp
